# deriv-api-rust

./: Cargo.toml  README.md
src/: main.rs  websocket.rs
