[package]
name = "deriv-api-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
tokio-tungstenite = { version = "0.17", features = ["native-tls"] }
tokio = { version = "1.0.0", default-features = false, features = ["full"] }
url = "2.2.2"
serde_json = "*"
